# aiafsim

./: .env.example  .gitignore  AFSIM 脚本智能体任务开发文档 (Implementation Guide).md  AFSIM 脚本智能体设计方案 (专业版 - 最终修正).md  AFSIM 脚本智能体：技术实施深度指南 (Technical Implementation Deep Dive)  README.md  docker-compose.yml  pyproject.toml  repomix-output.md  requirements.txt  test_model.py
app/: __init__.py  config.py  main.py
app/graph/: nodes.py  workflow.py
app/llm/: __init__.py  client.py
app/models/: state.py
app/rag/: store.py
app/validator/: api.py  error_parser.py  service.py
data/knowledge/: afsim_chunks.json
docker/app/: Dockerfile
docker/validator/: Dockerfile
scripts/: prepare_offline_bundle.ps1
