[project]
name = "aiafsim-agent"
version = "0.1.0"
description = "AFSIM DSL generation agent with validation loop"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "langgraph>=0.2.0",
]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.0",
]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
