[project]
name = "aiafsim-agent"
version = "0.1.0"
description = "AFSIM DSL generation agent with validation loop"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "pydantic>=2.8.0",
    "pydantic-settings>=2.4.0",
    "langgraph>=0.2.0",
    "chromadb>=0.5.5",
]

[dependency-groups]
dev = [
    "pytest>=8.3.0",
]

[tool.setuptools.packages.find]
include = ["app*"]

[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.build_meta"
